Compatibility: Downgraded to Java 11.