@@ -24,7 +24,7 @@ public final class FilletGenerator extends AbstractGenerator<FilletParams> {
     public ColumbinaSingleOutput getOutputForSingleInput(ColumbinaSingleInput input, FilletParams params) {
         if (input.ways != null && input.ways.size() == 1) {
             return buildSmoothPolyline(
-                    input.ways.getFirst(),
+                    input.ways.get(0),
                     params.surfaceRadius, params.surfaceChainageLength, params.maxPointNum,
                     params.minAngleDeg, params.maxAngleDeg
             );
@@ -138,8 +138,8 @@ public final class FilletGenerator extends AbstractGenerator<FilletParams> {
         List<Node> finalNodes = new ArrayList<>();
         // 对于非闭合路径（或闭合点没有曲线的闭合路径），从第一个节点开始；
         // 对于闭合路径且闭合点有曲线，从第一条曲线第一个点开始（下面for中添加）
-        if (!way.isClosed() || (way.isClosed() && filletCurves.getLast() == null))
-            finalNodes.add(nodes.getFirst());
+        if (!way.isClosed() || (way.isClosed() && filletCurves.get(filletCurves.size() - 1) == null))
+            finalNodes.add(nodes.get(0));
         // 遍历所有拐角
         for (int i = 0; i < numCorner; i ++) {
             if (filletCurves.get(i) != null) {  // 有过渡曲线就添加曲线上的所有点
@@ -149,8 +149,8 @@ public final class FilletGenerator extends AbstractGenerator<FilletParams> {
             } else finalNodes.add(nodes.get(i + 1));  // 没有过渡曲线，添加原始拐点
         }
         // 添加最后一个节点
-        if (way.isClosed()) finalNodes.add(finalNodes.getFirst());
-        else finalNodes.add(nodes.getLast());
+        if (way.isClosed()) finalNodes.add(finalNodes.get(0));
+        else finalNodes.add(nodes.get(nodes.size() - 1));
 
         return new ColumbinaSingleOutput(finalNodes, failedNodes);
         // 正式绘制前注意去重
